# Riverline-ML

./: .gitignore  Dockerfile  README.md  cohort_summary.csv  conversation_features.csv  main copy.py  main.py  nba_evaluation_1000_customers.csv  nba_evaluation_results.csv  nba_recommendations_20250730_103622.csv  nba_recommendations_20250730_104807.csv  pyproject.toml  requirements.txt  result.csv  results.csv  riverline.db  run_evaluation.py  user_behavior_analysis_results.json
data_pipeline/: __init__.py  app.py  data_clean.py  data_store.py
example/: nba_results copy.csv  results_1.csv
models/: channel_selector_encoder.pkl  channel_selector_model.pkl  channel_selector_scaler.pkl
next_best_action/: __init__.py  app.py  channel_optimizer.py  channel_selector.py  decision_engine.py  feature_engineer.py  message_generator.py  timing_optimizer.py
observe_user_behavior/: __init__.py  app.py  cohort_builder.py  conversation_analyzer.py  gemini_analyzer.py  ml_analyser.py  visualizer.py
