[project]
name = "riverline-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["my-project", "my-library"]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W"]  # Enable pycodestyle errors, pyflakes, warnings
ignore = ["E203", "E501","W923"]  # Ignore specific rules

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
